// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TabsBar matches snapshot with active home tab 1`] = `
<div>
  <nav
    aria-label="Main navigation"
    class="tabsBar"
    role="tablist"
  >
    <a
      aria-current="page"
      class="tab tabActive"
      href="/"
      role="tab"
    >
      <span
        class="iconWrap"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-house icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
          />
          <path
            d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
        </svg>
      </span>
      <span
        class="label"
      >
        Home
      </span>
    </a>
    <a
      class="tab"
      href="/profile"
      role="tab"
    >
      <span
        class="iconWrap"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </span>
      <span
        class="label"
      >
        Profile
      </span>
    </a>
  </nav>
</div>
`;

exports[`TabsBar matches snapshot with active profile tab 1`] = `
<div>
  <nav
    aria-label="Main navigation"
    class="tabsBar"
    role="tablist"
  >
    <a
      class="tab"
      href="/"
      role="tab"
    >
      <span
        class="iconWrap"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-house icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
          />
          <path
            d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
        </svg>
      </span>
      <span
        class="label"
      >
        Home
      </span>
    </a>
    <a
      aria-current="page"
      class="tab tabActive"
      href="/profile"
      role="tab"
    >
      <span
        class="iconWrap"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
      </span>
      <span
        class="label"
      >
        Profile
      </span>
    </a>
  </nav>
</div>
`;

exports[`TabsBar matches snapshot with badge 1`] = `
<div>
  <nav
    aria-label="Main navigation"
    class="tabsBar"
    role="tablist"
  >
    <a
      aria-current="page"
      class="tab tabActive"
      href="/"
      role="tab"
    >
      <span
        class="iconWrap"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-house icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
          />
          <path
            d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
        </svg>
        <span
          aria-hidden="true"
          class="badge"
        >
          10
        </span>
      </span>
      <span
        class="label"
      >
        Home
      </span>
    </a>
  </nav>
</div>
`;
